# configaroo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
example/: config.py
example/validate/: config.py
examples/: __init__.py
examples/validate/: __init__.py  config.py
src/configaroo/: __init__.py  configuration.py
src/configaroo/loaders/: __init__.py  json.py  toml.py
tests/: __init__.py  conftest.py  schema.py  test_configuration.py  test_dynamic.py  test_environment.py  test_json.py  test_loaders.py  test_print.py  test_toml.py  test_validation.py
tests/examples/: test_validate.py
tests/files/: config.toml  jsonfile  tomlfile
