[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "configaroo"
description = "Bouncy handling of configuration files"
readme = "README.md"
authors = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
maintainers = [{ name = "Geir Arne Hjelle", email = "geirarne@gmail.com" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["configuration", "configuration-management", "toml", "json"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.0", "pyplugs>=0.4.0", "python-dotenv>=1.1.0"]
dynamic = ["version"]

[project.urls]
homepage  = "https://github.com/gahjelle/configaroo"
github    = "https://github.com/gahjelle/configaroo"
issues    = "https://github.com/gahjelle/configaroo/issues"
changelog = "https://github.com/gahjelle/configaroo/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ipython>=8.36.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "tomli-w>=1.2.0",
]


[tool.setuptools.dynamic]
version = { attr = "configaroo.__version__" }
